tests/ui/traits/next-solver/diagnostics/projection-trait-ref.stderr
error[E0308]: mismatched types
  --> $DIR/projection-trait-ref.rs:8:34
   |
LL |     let x: <T as Trait>::Assoc = ();
   |            -------------------   ^^ types differ
   |            |
   |            expected due to this
   |
   = note: expected associated type `<T as Trait>::Assoc`
                    found unit type `()`
   = help: consider constraining the associated type `<T as Trait>::Assoc` to `()` or calling a method that returns `<T as Trait>::Assoc`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:8:13
   |
LL |     let x: <T as Trait>::Assoc = ();
   |             ^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T` with trait `Trait`
   |
LL | fn test_poly<T: Trait>() {
   |               +++++++

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:8:9
   |
LL |     let x: <T as Trait>::Assoc = ();
   |         ^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T` with trait `Trait`
   |
LL | fn test_poly<T: Trait>() {
   |               +++++++

error[E0277]: the trait bound `T: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:8:5
   |
LL |     let x: <T as Trait>::Assoc = ();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `T`
   |
help: consider restricting type parameter `T` with trait `Trait`
   |
LL | fn test_poly<T: Trait>() {
   |               +++++++

error[E0308]: mismatched types
  --> $DIR/projection-trait-ref.rs:16:36
   |
LL |     let x: <i32 as Trait>::Assoc = ();
   |            ---------------------   ^^ types differ
   |            |
   |            expected due to this
   |
   = note: expected associated type `<i32 as Trait>::Assoc`
                    found unit type `()`
   = help: consider constraining the associated type `<i32 as Trait>::Assoc` to `()` or calling a method that returns `<i32 as Trait>::Assoc`
   = note: for more information, visit https://doc.rust-lang.org/book/ch19-03-advanced-traits.html

error[E0277]: the trait bound `i32: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:16:13
   |
LL |     let x: <i32 as Trait>::Assoc = ();
   |             ^^^ the trait `Trait` is not implemented for `i32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/projection-trait-ref.rs:3:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^

error[E0277]: the trait bound `i32: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:16:9
   |
LL |     let x: <i32 as Trait>::Assoc = ();
   |         ^ the trait `Trait` is not implemented for `i32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/projection-trait-ref.rs:3:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^

error[E0277]: the trait bound `i32: Trait` is not satisfied
  --> $DIR/projection-trait-ref.rs:16:5
   |
LL |     let x: <i32 as Trait>::Assoc = ();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Trait` is not implemented for `i32`
   |
help: this trait has no implementations, consider adding one
  --> $DIR/projection-trait-ref.rs:3:1
   |
LL | trait Trait {
   | ^^^^^^^^^^^

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0277, E0308.
For more information about an error, try `rustc --explain E0277`.
